--- a/testing/testing.csproj
+++ b/testing/testing.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\src\DictionaryDotcom.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="TimHanewich.Toolkit" Version="3.5.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
